@@ -14,35 +14,12 @@
 @c and set EDITION, VERSION, UPDATED and UPDATED-MONTH
 @include version.texi
 
-@c Info entry
-@dircategory Routing Software:
-@direntry
-* Quagga: (quagga).		The Quagga routing software
-@end direntry
-
-@c @smallbook
-
-@ifinfo
-This file documents the @sc{gnu} Quagga software which manages common
-TCP/IP routing protocols.
-
-This is Edition @value{EDITION}, last updated @value{UPDATED} of
-@cite{The Quagga Manual}, for @uref{http://www.quagga.net/,,Quagga}
-Version @value{VERSION}.
-
-@value{COPYRIGHT_STR}
-
+@copying
+@quotation
 Permission is granted to make and distribute verbatim copies of this
 manual provided the copyright notice and this permission notice are
 preserved on all copies.
 
-@ignore
-Permission is granted to process this file through TeX and print the
-results, provided the printed document carries a copyright permission
-notice identical to this one except for the removal of this paragraph
-(this paragraph not being relevant to the printed manual).
-
-@end ignore
 Permission is granted to copy and distribute modified versions of this
 manual under the conditions for verbatim copying, provided that the
 entire resulting derived work is distributed under the terms of a
@@ -52,6 +29,28 @@ Permission is granted to copy and distribute translations of this manual
 into another language, under the above conditions for modified versions,
 except that this permission notice may be stated in a translation
 approved by Kunihiro Ishiguro.
+@end quotation
+@end copying
+
+@c Info entry
+@dircategory Routing Software:
+@direntry
+* Quagga: (quagga).		The Quagga Software Routing Suite
+@end direntry
+
+@c @smallbook
+
+@ifinfo
+This file documents the Quagga Software Routing Suite which manages common
+TCP/IP routing protocols.
+
+This is Edition @value{EDITION}, last updated @value{UPDATED} of
+@cite{The Quagga Manual}, for @uref{http://www.quagga.net/,,Quagga}
+Version @value{VERSION}.
+
+@value{COPYRIGHT_STR}
+
+@insertcopying
 @end ifinfo
 
 @titlepage
@@ -65,19 +64,7 @@ approved by Kunihiro Ishiguro.
 @vskip 0pt plus 1filll
 @value{COPYRIGHT_STR}
 
-Permission is granted to make and distribute verbatim copies of
-this manual provided the copyright notice and this permission notice
-are preserved on all copies.
-
-Permission is granted to copy and distribute modified versions of this
-manual under the conditions for verbatim copying, provided that the entire
-resulting derived work is distributed under the terms of a permission
-notice identical to this one.
-
-Permission is granted to copy and distribute translations of this manual
-into another language, under the above conditions for modified versions,
-except that this permission notice may be stated in a translation approved
-by Kunihiro Ishiguro.
+@insertcopying
 @end titlepage
 @page
 
@@ -92,25 +79,26 @@ for quagga-@value{VERSION}. @uref{http://www.quagga.net,,Quagga} is a fork of
 @end ifnottex
 
 @menu
-* Overview::                    
-* Installation::                
-* Basic commands::              
-* Zebra::                       
-* RIP::                         
-* RIPng::                       
-* OSPFv2::                      
-* OSPFv3::                      
-* BGP::                         
-* VTY shell::                       
-* Filtering::                   
-* Route Map::                   
-* IPv6 Support::                
-* Kernel Interface::            
-* SNMP Support::                
-* Zebra Protocol::              
-* Packet Binary Dump Format::   
-* Command Index::               
-* VTY Key Index::               
+* Overview::
+* Installation::
+* Basic commands::
+* Zebra::
+* RIP::
+* RIPng::
+* OSPFv2::
+* OSPFv3::
+* BGP::
+* Configuring Quagga as a Route Server::
+* VTY shell::
+* Filtering::
+* Route Map::
+* IPv6 Support::
+* Kernel Interface::
+* SNMP Support::
+* Zebra Protocol::
+* Packet Binary Dump Format::
+* Command Index::
+* VTY Key Index::
 @end menu
 @contents
 
